# johnmiller_stackai

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/agents/: architecture-reviewer.md  qa-test-engineer.md
backend/: __init__.py
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: __init__.py  routes.py  schemas.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/policies/: __init__.py  legal.yaml  medical.yaml  pci.yaml  pii.yaml
backend/app/services/: __init__.py  chunking.py  embedding.py  hallucination_detector.py  intent_classifier.py  policy_repository.py  query_transformer.py  retriever.py  search_indexer.py  text_extraction.py
backend/app/services/llm_response/: __init__.py  exceptions.py  generator.py  prompts.py  schemas.py  service.py  utils.py
backend/app/utils/: helpers.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_citation_threshold.py  test_citation_threshold_integration.py  test_e2e_performance.py  test_e2e_pipeline.py  test_hallucination_detector.py  test_policy_repository.py  test_sensitive_intent.py  test_sensitive_intent_live.py  test_services.py  test_utils.py  test_vague_query_detection.py
frontend/: __init__.py  app.py  config.py
frontend/api/: __init__.py  client.py  models.py
frontend/components/: __init__.py  chat.py  citations.py  document_viewer.py  file_upload.py  response_renderer.py  session_sidebar.py
frontend/utils/: __init__.py  helpers.py
